Fixed RDS database connection

--- a/html/home.html
+++ b/html/home.html
@@ -80,7 +80,7 @@
       </a>
     </div>
     <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button">
-      <a href="/artist" titles="artist">
+      <a href="/artist" title="artist">
         <img src="artist.png" alt="artist" width="150" height="150"/>
       </a>
     </div>
