--- a/html/genre.html
+++ b/html/genre.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title></title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
 
-<div class="container">
-  <h2>Genre</h2>
-  <p>Select genre:</p>
-  <form>
-    <div class="col-lg-4 text-center bg-light rounded-pill p-5 mb-1 page-button" >
-      <a href="/genre" title="genre">
-        <img src="genre.ico" alt="genre" width="15" height="15"/>
-      </a>
+<head>
+  <meta charset="utf-8">
+  <title>Genres</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</head>
+
+<body class="bg-light">
+  <div class="text-center mt-5 mb-5 container">
+    <div>
+      <img class="p-5" src="genre.ico" alt="title" width="150" height="150" />
     </div>
-  </form>
-  <ul class="list-group">
-    <a href="/pop" title="pop">
-      <li class="list-group-item">Pop</li>
-    </a>
-    <a href="/artistB" title="artistB">
-      <li class="list-group-item">B</li>
-    </a>
-  </ul>
-</div>
+    <h2>Genre</h2>
+    <p>Select genre:</p>
+    <form>
+    </form>
+    <ul class="list-group">
+      <a href="/pop" title="pop">
+        <li class="list-group-item">Pop</li>
+      </a>
+      <a href="/artistB" title="artistB">
+        <li class="list-group-item">B</li>
+      </a>
+    </ul>
+  </div>
+
+  <footer class="bg-dark footer fixed-bottom" style="height:10em;">
+    <p class="text-light text-center">Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
+    <br />
+    <div class="text-center">
+      <a class="text-white" href="/home">Go back to homepage</a>
+    </div>
+  </footer>
 
 </body>
+
 </html>
