--- a/html/title.html
+++ b/html/title.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title></title>
+  <title>Titles</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -9,24 +10,37 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
-<body>
 
-<div class="text-center container">
-  <h1 class="display-3">SongSearch.<strong>js</strong></h1>
-  <a href="/home">Go back to homepage</a>
+<body class="bg-light">
 
-  <br/>
-  <br/>
+  <div class="text-center container mt-5">
 
-  <h2 class="display-4">Titles</h2>
-  <p>Type song's title or keyword from title:</p>
-  <form>
-    <div class="form-group">
-      <label for="usr">Title:</label>
-      <input type="text" class="form-control" id="usr">
+    <div>
+      <img class="p-4" src="title.png" alt="title" width="150" height="150" />
     </div>
-  </form>
-</div>
+
+    <h1 class="display-3">Titles</h1>
+
+    <br />
+
+    <p>Search title by keyword(s):</p>
+    <form>
+      <div class="form-group">
+        <input type="text" class="form-control" id="usr">
+        <button type="submit" class="btn btn-secondary mt-1">Submit</button>
+      </div>
+    </form>
+  </div>
+
+
+  <footer class="bg-dark mt-5 footer fixed-bottom" style="height:10em;">
+    <p class="text-light text-center">Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
+    <br />
+    <div class="text-center">
+      <a class="text-white" href="/home">Go back to homepage</a>
+    </div>
+  </footer>
 
 </body>
+
 </html>
