Added genres to genre page

--- a/html/artist.html
+++ b/html/artist.html
@@ -23,10 +23,10 @@
     </div>
 
     <h1 class="display-3">Artists</h1>
-    <p>Type artist name or select letter:</p>
+
     <form>
       <div class="form-group ml-5 mr-5">
-        <label for="usr">Search:</label>
+        <label for="usr">Type artist name:</label>
         <input type="text" class="form-control" id="usr">
         <button type="submit" class="btn btn-secondary mt-1">Submit</button>
       </div>
