--- a/html/genre.html
+++ b/html/genre.html
@@ -14,23 +14,53 @@
 <body class="bg-light">
   <div class="text-center mt-5 mb-5 container">
     <div>
-      <img class="p-5" src="genre.ico" alt="title" width="150" height="150" />
+      <img class="p-4" src="genre.ico" alt="title" width="150" height="150" />
     </div>
     <h2>Genre</h2>
     <p>Select genre:</p>
     <form>
     </form>
     <ul class="list-group">
-      <a href="/pop" title="pop">
+      <a href="/genre/Pop" title="pop">
         <li class="list-group-item">Pop</li>
       </a>
-      <a href="/artistB" title="artistB">
-        <li class="list-group-item">B</li>
+      <a href="/genre/Hip-Hop" title="hip-hop">
+        <li class="list-group-item">Hip-Hop</li>
+      </a>
+      <a href="/genre/Rock" title="rock">
+        <li class="list-group-item">Rock</li>
+      </a>
+      <a href="/genre/Metal" title="metal">
+        <li class="list-group-item">Metal</li>
+      </a>
+      <a href="/genre/Country" title="country">
+        <li class="list-group-item">Country</li>
+      </a>
+      <a href="/genre/Jazz" title="jazz">
+        <li class="list-group-item">Jazz</li>
+      </a>
+      <a href="/genre/Electronic" title="electronic">
+        <li class="list-group-item">Electronic</li>
+      </a>
+      <a href="/genre/Folk" title="folk">
+        <li class="list-group-item">Folk</li>
+      </a>
+      <a href="/genre/R&B" title="r&b">
+        <li class="list-group-item">R&B</li>
+      </a>
+      <a href="/genre/Indie" title="indie">
+        <li class="list-group-item">Indie</li>
+      </a>
+      <a href="/genre/Other" title="other">
+        <li class="list-group-item">Other</li>
+      </a>
+      <a href="/genre/NotAvailable" title="notavailable">
+        <li class="list-group-item">Not Available</li>
       </a>
     </ul>
   </div>
 
-  <footer class="bg-dark footer fixed-bottom" style="height:10em;">
+  <footer class="bg-dark" style="height:10em;">
     <p class="text-light text-center">Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
     <br />
     <div class="text-center">
