--- a/html/artist.html
+++ b/html/artist.html
@@ -33,86 +33,170 @@
     </form>
 
     <p>Or pick alphabetically:</p>
+
     <ul class="list-group">
-      <a href="" title="artistA">
-        <li class="list-group-item">A</li>
-      </a>
-      <a href="" title="artistB">
-        <li class="list-group-item">B</li>
-      </a>
-      <a href="" title="artistC">
-        <li class="list-group-item">C</li>
-      </a>
-      <a href="" title="artistD">
-        <li class="list-group-item">D</li>
-      </a>
-      <a href="" title="artistE">
-        <li class="list-group-item">E</li>
-      </a>
-      <a href="" title="artistF">
-        <li class="list-group-item">F</li>
-      </a>
-      <a href="" title="artistG">
-        <li class="list-group-item">G</li>
-      </a>
-      <a href="" title="artistH">
-        <li class="list-group-item">H</li>
-      </a>
-      <a href="" title="artistI">
-        <li class="list-group-item">I</li>
-      </a>
-      <a href="" title="artistJ">
-        <li class="list-group-item">J</li>
-      </a>
-      <a href="" title="artistK">
-        <li class="list-group-item">K</li>
-      </a>
-      <a href="" title="artistL">
-        <li class="list-group-item">L</li>
-      </a>
-      <a href="" title="artistM">
-        <li class="list-group-item">M</li>
-      </a>
-      <a href="" title="artistN">
-        <li class="list-group-item">N</li>
-      </a>
-      <a href="" title="artistO">
-        <li class="list-group-item">O</li>
-      </a>
-      <a href="" title="artistP">
-        <li class="list-group-item">P</li>
-      </a>
-      <a href="" title="artistQ">
-        <li class="list-group-item">Q</li>
-      </a>
-      <a href="" title="artistR">
-        <li class="list-group-item">R</li>
-      </a>
-      <a href="" title="artistS">
-        <li class="list-group-item">S</li>
-      </a>
-      <a href="" title="artistT">
-        <li class="list-group-item">T</li>
-      </a>
-      <a href="" title="artistU">
-        <li class="list-group-item">U</li>
-      </a>
-      <a href="" title="artistV">
-        <li class="list-group-item">V</li>
-      </a>
-      <a href="" title="artistW">
-        <li class="list-group-item">W</li>
-      </a>
-      <a href="" title="artistX">
-        <li class="list-group-item">X</li>
-      </a>
-      <a href="" title="artistY">
-        <li class="list-group-item">Y</li>
-      </a>
-      <a href="" title="artistZ">
-        <li class="list-group-item">Z</li>
-      </a>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">A</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">B</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">C</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">D</li>
+            </a>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">E</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">F</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">G</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">H</li>
+            </a>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">I</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">J</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">K</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">L</li>
+            </a>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">M</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">N</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">O</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">P</li>
+            </a>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">Q</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">R</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">S</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">T</li>
+            </a>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">U</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">V</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">W</li>
+            </a>
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">X</li>
+            </a>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">Y</li>
+            </a>
+          </div>
+          <div class="col-sm-2">
+          </div>
+          <div class="col-sm-3">
+            <a href="">
+              <li class="list-group-item">Z</li>
+            </a>
+          </div>
+          <div class="col-sm-2">
+          </div>
+        </div>
+
     </ul>
+
+
   </div>
 
   <footer class="bg-dark mt-5" id="sticky-footer" style="height:10em;">
