Added lyrics & years pages

--- a/html/genre.html
+++ b/html/genre.html
@@ -16,7 +16,7 @@
     <div>
       <img class="p-4" src="genre.ico" alt="title" width="150" height="150" />
     </div>
-    <h2>Genre</h2>
+    <h2 class=display-3>Genres</h2>
     <p>Select genre:</p>
     <form>
     </form>
