Setup routing and added routes for Homepage & Titles

--- a/html/genre.html
+++ b/html/genre.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
   <div class="text-center mt-5 mb-5 container">
     <div>
-      <img class="p-4" src="genre.ico" alt="title" width="150" height="150" />
+      <img class="p-4" src="/images/genre.ico" alt="title" width="150" height="150" />
     </div>
     <h2 class=display-3>Genres</h2>
     <p>Select genre:</p>
