--- a/html/artist.html
+++ b/html/artist.html
@@ -19,7 +19,7 @@
 <body class="bg-light">
   <div class="text-center mt-5 mb-5 container">
     <div>
-      <img class="p-4" src="artist.png" alt="title" width="150" height="150" />
+      <img class="p-4" src="/images/artist.png" alt="title" width="150" height="150" />
     </div>
 
     <h1 class="display-3">Artists</h1>
