--- a/html/year.html
+++ b/html/year.html
@@ -15,7 +15,7 @@
   <body class="bg-light">
     <div class="text-center mt-5 mb-5 container">
       <div>
-        <img class="p-4" src="year.png" alt="title" width="150" height="150" />
+        <img class="p-4" src="/images/year.png" alt="title" width="150" height="150" />
       </div>
       <h1 class="display-3">Years</h1>
     </div>
