added search bar for lyrics page

--- a/html/lyrics.html
+++ b/html/lyrics.html
@@ -17,10 +17,20 @@
       <div>
         <img class="p-4" src="/images/lyrics.png" alt="title" width="150" height="150" />
       </div>
-
-      <h1 class="display-3">Lyrics</h1>
+        <h1 class="display-3">Lyrics</h1>
+        <p>Search lyrics by keyword(s):</p>
+        <form>
+          <div class="form-group">
+            <input type="text" class="form-group" id="usr">
+            <button type="submit" class="btn btn-secondary mt-1">Submit</button>
+          </div>
+        </form>
+      </div>
+    <div class="mb-5 text-center">
+      <h1>Results:</h1>
+      <p>
+      </p>
     </div>
-
     <footer class="bg-dark mt-5" style="height:10em;">
       <p class="text-light text-center">Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
       <br />
