added ejs files for lyrics

--- a/html/lyrics.html
+++ b/html/lyrics.html
@@ -13,6 +13,7 @@
 <body>
 
   <body class="bg-light">
+    <p>Its the html </p>
     <div class="text-center mt-5 mb-5 container">
       <div>
         <img class="p-4" src="/images/lyrics.png" alt="title" width="150" height="150" />
