--- a/html/year.html
+++ b/html/year.html
@@ -26,7 +26,7 @@
       </div>
       <h1 class="display-3">Years</h1>
       <div class="container text-center">
-        <input class="date-own form-control" ;" type="text">
+        <input class="date-own form-control" type="text">
 
 
         <script type="text/javascript">
@@ -39,13 +39,16 @@
 
       </div>
 
-    <footer class="bg-dark mt-5" style="height:10em;">
-      <p class="text-light text-center">Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
+    </div>
+    <footer class="bg-dark mt-5 fixed-bottom" style="height:10em;">
+      <p class="text-light text-center" >Copyright © 2019 - Dion Olympia & Henry Nguyen - All Rights Reserved</p>
       <br />
       <div class="text-center">
         <a class="text-white" href="/home">Go back to homepage</a>
       </div>
     </footer>
+
+
   </body>
 
 </html>
